refactor and finish division